--- a/leisure/src/main/resources/templates/premium.html
+++ b/leisure/src/main/resources/templates/premium.html
@@ -17,27 +17,27 @@
                 <p class="premium__conteudo-texto">Adiquirir um pacote premium te dará vantagens e ainda aumentará suas chances de vender seu imóvel.</p>
                 <ul class="premium__conteudo_lista">
                     <li class="premium__conteudo__lista-item">
-                        <i class="fa-light fa-check premium__lista-item-icone"></i>
+                        <i class="fa-solid fa-check fa-lg premium__lista-item-icone"></i>
                         <p class="premium__conteudo__lista-texto">Mais anúncios</p>
                     </li>
                     <li class="premium__conteudo__lista-item">
-                        <i class="fa-light fa-check premium__lista-item-icone"></i>
-                        <p class="premium__conteudo__lista-texto">Renove seus anúncios</p>
+                        <i class="fa-solid fa-check fa-lg premium__lista-item-icone"></i>
+                        <p class="premium__conteudo__lista-texto">Renovar seus anúncios</p>
                     </li>
                     <li class="premium__conteudo__lista-item">
-                        <i class="fa-light fa-check premium__lista-item-icone"></i>
+                        <i class="fa-solid fa-check fa-lg premium__lista-item-icone"></i>
                         <p class="premium__conteudo__lista-texto">Anúncios por mais tempo</p>
                     </li>
                     <li class="premium__conteudo__lista-item">
-                        <i class="fa-light fa-check premium__lista-item-icone"></i>
+                        <i class="fa-solid fa-check fa-lg premium__lista-item-icone"></i>
                         <p class="premium__conteudo__lista-texto">Maior visibilidade</p>
                     </li>
                     <li class="premium__conteudo__lista-item">
-                        <i class="fa-light fa-check premium__lista-item-icone"></i>
+                        <i class="fa-solid fa-check fa-lg premium__lista-item-icone"></i>
                         <p class="premium__conteudo__lista-texto">Impulsione seu anúncio</p>
                     </li>
                     <li class="premium__conteudo__lista-item">
-                        <i class="fa-light fa-check premium__lista-item-icone"></i>
+                        <i class="fa-solid fa-check fa-lg premium__lista-item-icone"></i>
                         <p class="premium__conteudo__lista-texto">Selos de qualidade do imóvel</p>
                     </li>
                 </ul>
