--- a/leisure/src/main/resources/static/style/index-sobre.css
+++ b/leisure/src/main/resources/static/style/index-sobre.css
@@ -44,6 +44,10 @@
     line-height: 1.5;
 }
 
+.sobre__conteudo__lista-texto i {
+    font-weight: bold;
+}
+
 /*  MEDIA SCREEN MIN 768px  */
 @media screen and (min-width: 768px){
     .sobre{
