--- a/leisure/src/main/resources/templates/fragments/rodape.html
+++ b/leisure/src/main/resources/templates/fragments/rodape.html
@@ -9,7 +9,7 @@
                 </a>
             </li>
             <li class="rodape__conteudo-item">
-                <a href="#" class="rodape__conteudo-link">
+                <a class="rodape__conteudo-link" data-bs-toggle="modal" data-bs-target="#comoComprarModal">
                     <i class="fa-regular fa-gears"></i>
                     <span>Como comprar</span>
                 </a>
