--- a/leisure/src/main/resources/static/style/style.css
+++ b/leisure/src/main/resources/static/style/style.css
@@ -47,6 +47,10 @@
 	--cor-sombra: 1px 3px 5px rgba(0, 0, 0, 0.3);
 }
 
+html {
+	overflow-x: hidden;
+}
+
 body {
 	color: var(--cor-font-principal);
 	font-family: var(--font-family);
@@ -80,6 +84,14 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
 input::placeholder {
     position: absolute;
     left: 0;
+}
+
+input:disabled,
+select:disabled,
+textarea:disabled {
+	background-color: transparent;
+	opacity: 1;
+	color: inherit;
 }
 
 .titulo__segundo {
