--- a/leisure/src/main/resources/templates/index.html
+++ b/leisure/src/main/resources/templates/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="destaques__container__conteudo">
                     <h2 class="titulo__segundo">Vem ver os destaques que separamos para você</h2>
-                    <p>Procurando um imóvel novo para chamar de seu? Então você está no lugar certo! Veja os imóveis destaques que temos por aqui</p>
+                    <p>Procurando um imóvel novo para chamar de seu? Então, você está no lugar certo! Veja os imóveis destaques que temos por aqui.</p>
                     <a class="no-decoration btn-primeiro pointer" data-bs-toggle="modal" data-bs-target="#verDestaques">Ver destaques</a>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                 <div class="financiamento__container__conteudo">
                     <h2 class="titulo__segundo">O que acha de um financiamento?</h2>
                     <p>O financiamento é uma das opções para conseguir a tão sonhada casa própria.</p>
-                    <p>Veja abaixo alguns bancos que você pode simular o valor da sua casa</p>
+                    <p>Veja abaixo alguns bancos que você pode simular o valor da sua casa.</p>
                     <span class="financiamento__container__conteudo__links">
                         <a class="no-decoration" href="https://banco.bradesco/html/classic/produtos-servicos/emprestimo-e-financiamento/imoveis/credito-imobiliario-aquisicao-de-imoveis.shtm" target="_blank">
                             <img class="financiamento__container__conteudo__imagem" src="/img/imagem/bradesco.svg" alt="Financiamento com banco Bradesco">
@@ -103,8 +103,8 @@
                     <img src="/img/imagem/familia.svg" alt="...">
                 </div>
                 <div class="como-comprar__container__conteudo">
-                    <h2 class="titulo__segundo">Comprar um imóvel para chamar de seu e da sua familia</h2>
-                    <p>Temos as melhores ofertas de casas para você e sua familia podendo ser negociada diretamente com o proprietário.</p>
+                    <h2 class="titulo__segundo">Comprar um imóvel para chamar de seu e da sua família</h2>
+                    <p>Temos as melhores ofertas de casas para você e sua família podendo ser negociada diretamente com o proprietário.</p>
                     <a class="no-decoration btn-segundo" href="#">Veja os melhores preços</a>
                     <span>
                         <a class="no-decoration pointer" data-bs-toggle="modal" data-bs-target="#comoComprarModal">Como falar com um vendedor <i class="fa-solid fa-arrow-right"></i></a>
@@ -161,7 +161,7 @@
                             <li class="sobre__conteudo__lista-item">
                                 <h3 class="titulo__terceiro">Compromisso</h3>
                                 <p class="sobre__conteudo__lista-texto">Na Leisure Imóveis, estamos empenhados em ajudar você a encontrar o lar perfeito, onde possa criar memórias preciosas e viver momentos especiais.</p>
-                                <p class="sobre__conteudo__lista-texto">Somos uma empresa especializada no mercado imobiliario sempre buscando o melhor para atender nossos clientes.</p>
+                                <p class="sobre__conteudo__lista-texto">Somos uma empresa especializada no mercado imobiliário sempre buscando o melhor para atender nossos clientes.</p>
                             </li>
                         </ul>
                     </li>
